<resources>
    <string name="app_name">login</string>

    <string name="login_texto">Colaborador digital</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="login_boton">Ingresar</string>

    <string name="componentes_de_la_librer_a_ui_aar">Componentes de la librería UI.aar</string>
    <string name="boton_usando_estilo_de_librer_a">Boton normal con estilo de la librería UI.aar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">home</string>
    <string name="menu_gallery">gallery</string>
    <string name="menu_slideshow">slideshow</string>

    <string name="menu_agregar_doctos">- Agregar doctos. a Bitacorar</string>
    <string name="menu_generacion_bitacora">- Generación de bitácora</string>
    <string name="menu_cancelacion_bitacora">- Cancelación de bitácora</string>
    <string name="menu_liquidar_bitacora">- Liquidar bitácora en destino</string>
    <string name="menu_consulta_QR">- Consulta de QR\'s</string>
    <string name="menu_saldos">- Timbrar Saldos</string>
    <string name="menu_salir">Cerrar sesión</string>

    <string name="menu_divider_cedis">CEDIS Cross bitacora</string>
    <string name="menu_divider_consultaQR">Consulta QR</string>
    <string name="menu_divider_saldos">Saldos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>